fr translation for howto.vmencap

--- a/source/translated/fr/howto.vmencap.po
+++ b/source/translated/fr/howto.vmencap.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenSVC 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-07-18 11:41\n"
+"POT-Creation-Date: 2012-08-01 16:24\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,69 +19,74 @@ msgstr ""
 # 662f8e1099a94810bc8bf678a5b228d4
 #: ../../howto.vmencap.rst:75
 msgid "**autostart_node**"
-msgstr ""
+msgstr "**autostart_node**"
 
 # 7b7ba015144640718bb66c408be71dfd
 #: ../../howto.vmencap.rst:79
 msgid "**drpnode**"
-msgstr ""
+msgstr "**drpnode**"
 
 # 7f2e2a94672e41e9a73815a874c8042f
 #: ../../howto.vmencap.rst:83
 msgid "**drpnodes**"
-msgstr ""
+msgstr "**drpnodes**"
 
 # 7fef970b7526428aa26aa1d0894da35c
 #: ../../howto.vmencap.rst:97
 msgid "**ip resources**"
-msgstr ""
+msgstr "**ressources ip**"
 
 # 5bf28dd9fbbf4cb4a2a019f9a8f3017e
 #: ../../howto.vmencap.rst:67
 msgid "**mode**"
-msgstr ""
+msgstr "**node**"
 
 # 9b2f3cc25a474a3ab3ffbfac8decaf5f
 #: ../../howto.vmencap.rst:71
 msgid "**nodes**"
-msgstr ""
+msgstr "**nodes**"
 
 # 277f6299aaba41a7b74c7dd47efc504b
 #: ../../howto.vmencap.rst:87
 msgid "**scsireserv**"
-msgstr ""
+msgstr "**scsireserv**"
 
 # e81a125be3194ed4a092e5c6b745fe8b
 #: ../../howto.vmencap.rst:63
 msgid "**vm_name**"
-msgstr ""
+msgstr "**vm_name**"
 
 # 25e13b726e5e4e29a810a102c65f83a1
 #: ../../howto.vmencap.rst:105
 msgid "**vmdg resource**"
-msgstr ""
+msgstr "**ressource vmdg**"
 
 # 83fa8c0c8f9b450798c0df4a13c7cef3
 #: ../../howto.vmencap.rst:103
+#, fuzzy
 msgid ""
 "*and* execute in the context of the guest operating system a command "
 "verifying the plumbing on the 'ipdev' adapter."
 msgstr ""
+"*and* exécute dans le contexte du système d'exploitation invité une commande "
+"vérifiant la présence de l'adresse internet sur la carte 'ipdev'."
 
 # 5de0ad6d37ee4f82b4d1761ce394cef3
 #: ../../howto.vmencap.rst:93
 msgid "*and* the disks are dedicated to the service"
-msgstr ""
+msgstr "*et* les disques sont dédiés au service"
 
 # 63f7fc84921e4a7dbd59d362e76e4619
 #: ../../howto.vmencap.rst:95
 msgid "*and* the disks support the scsi3 persistent reservation commands"
 msgstr ""
+"*et* les disques supportent les commandes de réservation persistante scsi3"
 
 # 7ddef349d48b40f49594fae0c44182c0
 #: ../../howto.vmencap.rst:43
 msgid "A typical VM service env file should look like::"
 msgstr ""
+"Un fichier de configuration typique de service avec VM ressemblerait à ::"
 
 # 4fe3c3c56afb40eca196376b586370f5
 #: ../../howto.vmencap.rst:107
@@ -94,6 +99,14 @@ msgid ""
 "care of by the hypervisor software. It is also necessary for disk inventory "
 "completeness."
 msgstr ""
+"Ajoutez cette bribe de configuration de ressource si les disques sont donnés "
+"tels quels en gestion à la machine virtuelle. La ressource 'vmdg' est un cas "
+"particulier de ressource 'vg' dont la liste des disques est obtenue par "
+"inspection de la configuration de la machine virtuelle. Les commandes "
+"OpenSVC 'start' et 'stop' y sont réduites à la gestion des réservations scsi "
+"puisque le reste est pris en charge par le logiciel de virtualisation. Cet "
+"inventaire est également utilisé pour la complétude de l'inventaire des "
+"disques."
 
 # 60e383aa24e94213b0fc2ee7647f4989
 #: ../../howto.vmencap.rst:99
@@ -102,11 +115,15 @@ msgid ""
 "operating system. The ip resources described in the env file are used to "
 "check the resource availability. This checks are:"
 msgstr ""
+"Tous les pilotes de VM de OpenSVC, excepté 'zone', délèguent le montage des "
+"adresses internet au système d'exploitation de la VM. Les configurations de "
+"ressources ip dans le fichier env des services ont pour but la vérification "
+"de la santé du service. Ces vérifications sont :"
 
 # 4fb0c4d7dd414ecbb5e9040f4a9e0ce2
 #: ../../howto.vmencap.rst:15
 msgid "Benefit from all the OpenSVC data replication modes"
-msgstr ""
+msgstr "Bénéfice des pilotes de réplication de données de OpenSVC"
 
 # 340dba51474f466ab4d350820ae36aa8
 #: ../../howto.vmencap.rst:17
@@ -114,31 +131,33 @@ msgid ""
 "Benefit from the OpenSVC Collector performance monitoring, obsolescence "
 "management, alarming, and more."
 msgstr ""
+"Bénéfice des services de collecte de performance, de surveillance, de "
+"gestion de l'obsolescence, ... fournis par le collecteur."
 
 # 00d4a08d998c4202b2e6b423eaa1f4d3
 #: ../../howto.vmencap.rst:69
 msgid "Choose among kvm, xen, esx, hpvm, ldom, vbox, zone, vz and lxc."
-msgstr ""
+msgstr "Choisir parmi kvm, xen, esx, hpvm, ldom, vbox, zone, vz, et lxc."
 
 # 98e58e6e9e4549f98e9b1077717ef467
 #: ../../howto.vmencap.rst:24
 msgid "Configure some ssh key trusts"
-msgstr ""
+msgstr "Configurer les autorisations de clé ssh"
 
 # 3ff2f79a49e545f7871d69c269770ebb
 #: ../../howto.vmencap.rst:41
 msgid "Customize the service env file"
-msgstr ""
+msgstr "Configurer le fichier env du service"
 
 # 2a296bf05116497c9615acc26671c787
 #: ../../howto.vmencap.rst:33
 msgid "Follow the :ref:`agent.install` guide."
-msgstr ""
+msgstr "Suivre le guide :ref:`agent.install`."
 
 # 7fb6696e2ab544228bc2ab98dcdcafbe
 #: ../../howto.vmencap.rst:38
 msgid "Follow the :ref:`agent.service.creation` guide."
-msgstr ""
+msgstr "Suivre le guide :ref:`agent.service.creation`."
 
 # e97d456ab109481b9a9c343a395e6010
 #: ../../howto.vmencap.rst:65
@@ -150,21 +169,31 @@ msgid ""
 "hypersisor and the VM do not share the same DNS domain. Communication with "
 "zones use the zlogin utility, so fqdn are never needed in this case."
 msgstr ""
+"Si ce paramètre n'est pas configuré, le nom de la VM prend pour valeur le nom "
+"du service. Quand la VM encapsulée est déjà existante, il est probable qu'il "
+"soit nécessaire d'utiliser ce paramètre pour s'adapter au nom de la VM "
+"certainement différent du nom du service. Ce nom est utilisé par "
+"l'hyperviseur pour communiquer avec la VM. Il est donc possible qu'il soit "
+"nécessaire de passer un nom complètement qualifié si le resolver de "
+"l'hyperviseur n'est pas paramétré pour chercher dans le domaine de la VM. "
+"Les communications avec les zones se font par zlogin, donc les noms "
+"complètement qualifiés ne sont jamais nécessaires dans ce contexte."
 
 # f65ad4e6508644adbe510e3e76c5abd0
 #: ../../howto.vmencap.rst:22
 msgid "Install a package"
-msgstr ""
+msgstr "Installer un paquet"
 
 # c61601a9854a46e4aaf26813a16ca836
 #: ../../howto.vmencap.rst:5
 msgid "Introduction"
-msgstr ""
+msgstr "Introduction"
 
 # 82d88fd4daef4bf89924ba2553bb22e8
 #: ../../howto.vmencap.rst:7
 msgid "Managing VM as services has many advantages:"
 msgstr ""
+"La gestion des VM en tant que service OpenSVC amène de nombreux avantages :"
 
 # 873c12a489564fe6971b4d5dbcff6cee
 #: ../../howto.vmencap.rst:11
@@ -172,11 +201,13 @@ msgid ""
 "Mix virtualized and non-virtualized services on the same hosts without "
 "increasing complexity (except xen, ldom, esx)"
 msgstr ""
+"Mélange de service virtualisés et non-virtualisés sur un même hôte sans "
+"accroîssement de la complexité (excepté xen, ldom, esx)"
 
 # 701175c3f4d749279619bea48c40a6f6
 #: ../../howto.vmencap.rst:31
 msgid "Nodeware installation"
-msgstr ""
+msgstr "Installation de l'agent"
 
 # 3c4f3c8590dc4ad8ad5dc18eb8ad97fe
 #: ../../howto.vmencap.rst:20
@@ -185,6 +216,9 @@ msgid ""
 "which does not require service disruption. This cookbook details the steps "
 "involved:"
 msgstr ""
+"L'installation de OpenSVC sur un hyperviseur existant est un processus "
+"trivial qui ne requiert pas d'arrêt de service. Ce guide détaille les étapes "
+"de ce processus :"
 
 # 554d8936e99d464299e6053add6c53c8
 #: ../../howto.vmencap.rst:112
@@ -192,11 +226,13 @@ msgid ""
 "OpenSVC use ssh as root to execute commands in the other hypervisors "
 "context. Such commands are limited to:"
 msgstr ""
+"OpenSVC utilise ssh en tant que root pour exécuter des commandes sur les "
+"autres hyperviseurs. Ces commandes se limitent à :"
 
 # 00bc28fd4f5a40fb81666fe511e25196
 #: ../../howto.vmencap.rst:128
 msgid "Populate the application startup scripts directory"
-msgstr ""
+msgstr "Populer le répertoire des lanceurs applicatifs"
 
 # 9245754d69f94adaa427fcb85fa0a154
 #: ../../howto.vmencap.rst:9
@@ -205,21 +241,26 @@ msgid ""
 "different operating systems and services encapsulating virtual machines from "
 "different technologies (kvm, xen, esx, hpvm, zone, lxc, vz, ...)"
 msgstr ""
+"Unification des méthodes de start/stop/status avec les services non-"
+"virtualisés et quel que soit le système d'exploitation hôte et la "
+"technologie de virtualisation (kvm, xen, esx, hpvm, zone, lxc, vz, ...)"
 
 # ab937b1548e24d4d897c79f15031b5d0
 #: ../../howto.vmencap.rst:13
 msgid "Seemless integration of hypervisors in the disaster recovery plan"
 msgstr ""
+"Intégration transparente des hyperviseurs au plan de reprise d'activité "
+"unifié par OpenSVC"
 
 # fa8962da79f24b2a96b73e4a1c7d6b37
 #: ../../howto.vmencap.rst:36
 msgid "Service creation"
-msgstr ""
+msgstr "Création du service"
 
 # 2def20044c5149c9881b3dde659bec03
 #: ../../howto.vmencap.rst:89
 msgid "Set this parameter to true if:"
-msgstr ""
+msgstr "Positionner ce paramètre à true si :"
 
 # 80672b735ec349dabf508be23447dee8
 #: ../../howto.vmencap.rst:81
@@ -227,6 +268,8 @@ msgid ""
 "Set to the hypervisor where the virtual machine should run in a disaster "
 "recovery situation."
 msgstr ""
+"Positionner au nom de l'hyperviseur où la machine virtuelle doit tourner en "
+"cas de plan de reprise d'activité."
 
 # 9df35e6a417a4acbb6b968d5ce2cf352
 #: ../../howto.vmencap.rst:77
@@ -234,6 +277,8 @@ msgid ""
 "Set to the hypervisor where the virtual machine should run in a normal "
 "situation."
 msgstr ""
+"Positionner au nom de l'hyperviseur où la machine virtuelle doit tourner en "
+"mode nominal."
 
 # cab2c6af59f94a6dbe9113f2db22b4da
 #: ../../howto.vmencap.rst:73
@@ -241,6 +286,8 @@ msgid ""
 "Set to the list of hypervisors able to run the virtual machine in a normal "
 "situation."
 msgstr ""
+"La liste des hyperviseurs habilités à faire tourner la machine virtuelle en "
+"situation nominale."
 
 # 84aa7986ac744175ae9f139daa808830
 #: ../../howto.vmencap.rst:85
@@ -248,21 +295,23 @@ msgid ""
 "Set to the list of hypervisors where the virtual machine may run in a "
 "disaster recovery situation."
 msgstr ""
+"La liste des hyperviseurs habilités à faire tourner la machine virtuelle en "
+"situation de plan de reprise d'activité."
 
 # 935acac50df241428d90c56b64cd8a41
 #: ../../howto.vmencap.rst:26
 msgid "Setup a node configuration file (single word)"
-msgstr ""
+msgstr "Configurer le fichier configuration du noeud (un mot)"
 
 # 183a4175d87a4a248aeaa25ca91186bc
 #: ../../howto.vmencap.rst:28
 msgid "Setup a service configuration file (~15 lines)"
-msgstr ""
+msgstr "Configurer le fichier env du service (~15 lignes)"
 
 # f9007739a1344a798c69a56e8977c168
 #: ../../howto.vmencap.rst:133
 msgid "Test"
-msgstr ""
+msgstr "Test"
 
 # 80d3f2d1f8174e0d955b3269c4d81f81
 #: ../../howto.vmencap.rst:121
@@ -271,6 +320,10 @@ msgid ""
 "drivers use ssh as root to execute commands in the guest context. Such "
 "commands are limited to:"
 msgstr ""
+"Cette étape ne s'applique pas aux zones, puisque zlogin est toujours "
+"autorisé. Les autres pilotes utilisent ssh en tant que root pour exécuter "
+"des commandes dans le contexte de la machine virtuelle. Ces commandes se "
+"limitent à :"
 
 # 85a479b424834197948abea2fb0033e4
 #: ../../howto.vmencap.rst:130
@@ -282,53 +335,65 @@ msgid ""
 "(/etc/rcX.d, /sbin/rcX.d, DMF, ...). OpenSVC expects to find app launchers "
 "in /svc/etc/init.d in the guest file hierarchy."
 msgstr ""
+"Cette étape est recommandée mais non nécessaire. Le jeu de commande OpenSVC "
+"permet de démarrer une machine virtuelle sans pour autant démarrer les "
+"applications, qui sont elles manipulées par stopapp/startapp. Pour que cette "
+"fonctionnalité soit opérationnelle, il ne faut pas que les lanceurs "
+"applicatifs soient gérés par le système d'exploitation de la VM (/etc/rcX."
+"d, /sbin/rcX.d, DMF, ...).OpenSVC s'attend à trouver les lanceurs "
+"applicatifs dans /svc/etc/init.d/ dans l'arborescence de l'invité."
 
 # d87c411a81af4164bc2f02e5ce5900c7
 #: ../../howto.vmencap.rst:119
 msgid "Trust the hypervisor-to-guest ssh root sessions"
 msgstr ""
+"Autoriser les communications ssh en tant que root entre les hyperviseurs et "
+"l'invité"
 
 # 3734a408d177423c8d2ce0c68e385c90
 #: ../../howto.vmencap.rst:110
 msgid "Trust the hypervisor-to-hypervisor ssh root sessions"
 msgstr ""
+"Autoriser les communications ssh en tant que root entre les hyperviseurs"
 
 # 5e98da136015460481ed41b3fbf15415
 #: ../../howto.vmencap.rst:2
 msgid "VM encapsulation in a service"
-msgstr ""
+msgstr "Encapsulation d'une VM dans un service"
 
 # fa24509ed0e24b85aea611e9a43c5481
 #: ../../howto.vmencap.rst:135
 msgid "You should now be able to run succesfully::"
-msgstr ""
+msgstr "Vous devriez désormais pouvoir exécuter ::"
 
 # 23586cd746ba432dba49ef58840c8402
 #: ../../howto.vmencap.rst:125
 msgid "application start-up scripts execution in the context of the guest"
-msgstr ""
+msgstr "exécution des lanceurs applicatifs dans le contexte de l'invité"
 
 # cca4f7557d1b463693c41453ea3830ff
 #: ../../howto.vmencap.rst:123
 msgid "ip resources health checking"
-msgstr ""
+msgstr "vérification de la santé des ressources ip"
 
 # ce835a24e4e14e35966c805404137f00
 #: ../../howto.vmencap.rst:101
 msgid "ping 'ipname'"
-msgstr ""
+msgstr "ping 'ipname'"
 
 # 0a4381648e414b4ab3679c904b80c88f
 #: ../../howto.vmencap.rst:114
 msgid "remote host mode checking"
-msgstr ""
+msgstr "vérification du host_mode distant"
 
 # 9e2f3bea46714a219830848356bc77a1
 #: ../../howto.vmencap.rst:116
 msgid "remote host replication target mount point checking"
 msgstr ""
+"vérification des montages des systèmes de fichiers cibles des réplications "
+"de données"
 
 # 75bd80a899e946178efa00cd053aa207
 #: ../../howto.vmencap.rst:91
 msgid "the disks are shared amongst hypervisors"
-msgstr ""
+msgstr "les disques sont partagés entre les hyperviseurs"
